--- a/Bryllup/appsettings.json
+++ b/Bryllup/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Bryllup-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=frontsystemswe.database.windows.net;Initial Catalog=bryllup;Persist Security Info=True;User ID=karlkaal;Password=2much4me!_"
   },
   "Logging": {
     "IncludeScopes": false,
